--- a/public/hatchend.css
+++ b/public/hatchend.css
@@ -1,2 +1,2 @@
-.red{color:red}.amber{color:orange}.green{color:#32cd32}.grey{color:#d3d3d3}.blue{color:#007ba7}
-/*# sourceMappingURL=main.bf6ee1be.css.map*/
+.red{color:red}.amber{color:orange}.green{color:#32cd32}.grey{color:#d3d3d3}.blue{color:#007ba7}.page{margin-top:15mm;margin-left:5mm}.big{font-size:28px}.huge{font-size:38px}.label{width:99mm;height:38mm;padding:3mm 3mm 0;margin-right:3mm;float:left;font-family:Times New Roman,Times,serif;font-size:20px;color:#000;text-align:center;overflow:hidden;border:none;outline:none}.page-break{clear:left;display:block;page-break-after:always}
+/*# sourceMappingURL=main.05fa5b2d.css.map*/
